# Timer-Qt-QML

./: .gitignore  README.md
Timer/: .gitignore  Button.qml  ButtonPannel.qml  CMakeLists.txt  TimeView.qml  Timer.pro  main.cpp  main.qml  qml.qrc  timemomentmodel.cpp  timemomentmodel.h  timer.cpp  timer.h  timer_logger.cpp  timer_logger.h
Timer/qml/: Button.qml  ButtonPannel.qml  TimeMomentsView.qml  TimeView.qml  main.qml
Timer/src/: main.cpp  timer.cpp
